fix  seo issues

--- a/resources/views/Category/Components/CategoryBreadcrumbs.twig
+++ b/resources/views/Category/Components/CategoryBreadcrumbs.twig
@@ -2,7 +2,7 @@
     <nav id="vue-rendered-breadcrumbs" style="display: none;" class="container-max small hidden-sm-down">
         <ul class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="/">
+                <a href="{{ homepageURL }}">
                     <i class="fa fa-home" aria-hidden="true"></i>
                 </a>
             </li>
