--- a/resources/views/Checkout/OrderConfirmation.twig
+++ b/resources/views/Checkout/OrderConfirmation.twig
@@ -31,7 +31,7 @@
             <div class="row">
                 {% set loggedIn = frontend.Account.getIsAccountLoggedIn %}
                 <div class="col-xs-6 col-md-4 {% if loggedIn %}offset-md-2{% else %}offset-xs-3 offset-md-4{% endif %}">
-                    <a v-waiting-animation-infinite href="/" type="" class="btn btn-primary btn-block bg-primary">
+                    <a v-waiting-animation-infinite href="{{ homepageURL }}" type="" class="btn btn-primary btn-block bg-primary">
                         <i class="fa fa-home" aria-hidden="true"></i>
                         {{ trans("Ceres::Template.orderConfirmationHomepage") }}
                     </a>
