--- a/resources/views/OrderReturn/OrderReturnConfirmation.twig
+++ b/resources/views/OrderReturn/OrderReturnConfirmation.twig
@@ -7,27 +7,27 @@
 
 {% block PageBody %}
 
-<div class="page-content basket order-return container-max m-b-3 m-t-1">
-    <div class="row m-b-3">
-        <div class="col-xs-12">
-            <h2 class="h1">{{ trans("Ceres::Template.returnConfirmationThanks") }}</h2>
-            <p>{{ trans('Ceres::Template.returnConfirmationInfo') }}</p>
-        </div>
-    </div>
-    <hr>
-    <div class="row">
-        {% set loggedIn = frontend.Account.getIsAccountLoggedIn %}
-        <div class="col-xs-6 col-md-4 {% if loggedIn %}offset-md-2{% else %}offset-xs-3 offset-md-4{% endif %}">
-            <a href="/" type="" class="btn btn-primary btn-block bg-primary">{{ trans("Ceres::Template.returnConfirmationHomepage") }}</a>
-        </div>
-
-
-        {% if loggedIn %}
-            <div class="col-xs-6 col-md-4">
-                <a href="{{ urls.myAccount }}" type="" class="btn btn-primary btn-block bg-primary">{{ trans("Ceres::Template.returnConfirmationMyAccount") }}</a>
+    <div class="page-content basket order-return container-max m-b-3 m-t-1">
+        <div class="row m-b-3">
+            <div class="col-xs-12">
+                <h2 class="h1">{{ trans("Ceres::Template.returnConfirmationThanks") }}</h2>
+                <p>{{ trans('Ceres::Template.returnConfirmationInfo') }}</p>
             </div>
-        {% endif %}
+        </div>
+        <hr>
+        <div class="row">
+            {% set loggedIn = frontend.Account.getIsAccountLoggedIn %}
+            <div class="col-xs-6 col-md-4 {% if loggedIn %}offset-md-2{% else %}offset-xs-3 offset-md-4{% endif %}">
+                <a href="{{ homepageURL }}" type="" class="btn btn-primary btn-block bg-primary">{{ trans("Ceres::Template.returnConfirmationHomepage") }}</a>
+            </div>
+
+
+            {% if loggedIn %}
+                <div class="col-xs-6 col-md-4">
+                    <a href="{{ urls.myAccount }}" type="" class="btn btn-primary btn-block bg-primary">{{ trans("Ceres::Template.returnConfirmationMyAccount") }}</a>
+                </div>
+            {% endif %}
+        </div>
     </div>
-</div>
 
 {% endblock %}
