--- a/resources/views/PageDesign/Partials/Header/Breadcrumb.twig
+++ b/resources/views/PageDesign/Partials/Header/Breadcrumb.twig
@@ -1,10 +1,11 @@
 {{ component("Ceres::Category.Components.CategoryBreadcrumbs") }}
+{% set homepageURL = services.url.getHomepageURL() %}
 
 {% if categoryBreadcrumbs is not empty %}
     <nav id="twig-rendered-breadcrumbs" class="container-max small hidden-sm-down">
         <ul class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="/">
+                <a href="{{ homepageURL }}">
                     <i class="fa fa-home" aria-hidden="true"></i>
                 </a>
             </li>
