ADD custom font data attribute

--- a/resources/views/PageDesign/Partials/Head.twig
+++ b/resources/views/PageDesign/Partials/Head.twig
@@ -19,7 +19,7 @@
     {% endfor %}
 {% endif %}
 
-<style>
+<style data-font="Custom-Font">
     {% set customFont =
         {
             regular: config('Ceres.custom-font-regular'),
