changed bgcolor and color homepage title css

--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -18679,7 +18679,7 @@ body.menu-is-visible {
 .homepage-title {
   padding: 1rem 1.5rem;
   border-bottom: 0;
-  background: #008ebd;
+  background: #000000;
   position: relative;
   display: -ms-flexbox;
   display: flex;
@@ -18687,7 +18687,7 @@ body.menu-is-visible {
 
 .homepage-title > h1 {
   margin: .5rem auto;
-  color: #fff;
+  color: green;
   border-bottom: 2px solid #fff;
   padding: 0 0 .5rem;
   font-size: 2.5rem;
