FIX basket - item id not showing

--- a/resources/views/Basket/Components/BasketListItem.twig
+++ b/resources/views/Basket/Components/BasketListItem.twig
@@ -109,7 +109,7 @@
                         {% if "basket.item.item_id" in basketDetailsData %}
                             <div class="m-t-1">
                                 <strong>{{ trans("Ceres::Template.basketItemId") }}:</strong>
-                                <span>${ basketItem.basketItemId }</span>
+                                <span>${ basketItem.itemId }</span>
                             </div>
                         {% endif %}
 
