--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -67,11 +67,7 @@
             {% endif %}
             {% if ceresConfig.basket.previewType == "right" %}
                 <div class="wrapper wrapper-right">
-                    <basket-preview
-                        template="#vue-basket-preview"
-                        :basket-data="{{ basket | json_encode }}"
-                        :show-net-prices={{ showNetPrices | json_encode }}>
-                    </basket-preview>
+                    <basket-preview :show-net-prices={{ showNetPrices | json_encode }}></basket-preview>
                 </div>
             {% endif %}
 
