--- a/resources/css/ceres.scss
+++ b/resources/css/ceres.scss
@@ -19198,7 +19198,7 @@ nav.navbar.megamenu {
 {
     .widget-inner
     {
-        // padding: 1rem 1.5rem;
+        padding: 1rem 1.5rem;
 
         .placeholder {
             height: 75px;
