--- a/resources/scss/ceres/widgets/Common/_text-widget.scss
+++ b/resources/scss/ceres/widgets/Common/_text-widget.scss
@@ -2,7 +2,7 @@
 {
     .widget-inner
     {
-        // padding: 1rem 1.5rem;
+        padding: 1rem 1.5rem;
 
         .placeholder {
             height: 75px;
