IMPROVE twig builder to handle imports

--- a/resources/views/Widgets/Helper/TwigBuilder.twig
+++ b/resources/views/Widgets/Helper/TwigBuilder.twig
@@ -129,3 +129,9 @@
         {% endif %}
     {% endspaceless -%}
 {% endmacro %}
+
+{% macro import(name, template) %}
+    {%- spaceless %}
+        {{ Twig.do("import \"" ~ template ~ "\ as " ~ name ) }}
+    {% endspaceless -%}
+{% endmacro %}
