--- a/resources/views/Widgets/Common/ImageCarouselWidget.twig
+++ b/resources/views/Widgets/Common/ImageCarouselWidget.twig
@@ -1,5 +1,5 @@
 {% import "Ceres::Widgets.Helper.TwigBuilder" as Twig %}
-{% import "Ceres::PageDesign.Macros.ItemName" as ItemName %}
+{{ Twig.import("ItemName", "Ceres::PageDesign.Macros.ItemName") }}
 
 {% set carouselId = uid() %}
 
@@ -28,11 +28,11 @@
         {{ Twig.set("itemData", "itemData.documents[0].data") }}
         {{ Twig.set("itemImage", "itemData.images | itemImages | orderByKey('position') | first") }}
 
-        {{ Twig.set("name", "itemData | itemName") }}
+        {{ Twig.set("name", Twig.print("ItemName.get(\"itemData | itemName\", \"itemData.variation.bundleType\")")) }}
         {{ Twig.set("url", "itemData | itemURL") }}
         {{ Twig.set("imageUrl", "itemImage.url") }}
 
-        {{ Twig.set("slide", "slide | merge({ name: itemData | itemName })") }}
+        {{ Twig.set("slide", "slide | merge({ name:" ~ Twig.print("ItemName.get(\"itemData | itemName\", \"itemData.variation.bundleType\")") ~ " })") }}
         {{ Twig.set("slide", "slide | merge({ url: itemData | itemURL })") }}
         {{ Twig.set("slide", "slide | merge({ imageUrl: itemImage.url })") }}
 
