--- a/resources/views/Widgets/Common/Partials/CategoryListItemPreview.twig
+++ b/resources/views/Widgets/Common/Partials/CategoryListItemPreview.twig
@@ -66,7 +66,7 @@
         <div class="thumb-content">
             <a class="thumb-title small">
                 {% if item is defined %}
-                    {{ item.data | itemName }}
+                    {{ ItemName.get(item.data | itemName, item.data.variation.bundleType) }}
                 {% else %}
                     {{ trans("Ceres::Widget.itemListPlaceholderItemName") }}
                 {% endif %}
