changed some colors in ceres.scss

--- a/resources/css/ceres.scss
+++ b/resources/css/ceres.scss
@@ -83,11 +83,11 @@ $gray-lighter:          #dcdbd8 !default;
 $gray-lighter2:         #f4f4f4 !default;
 $gray-lightest:         #f7f7f9 !default;
 
-$brand-primary:         #008ebd !default;
-$brand-secondary:       #d4021d !default;
+$brand-primary: #665540 !default;
+$brand-secondary: #d4ad25 !default;
 
 $brand-success:         #7ED321 !default;
-$brand-info:            #5bc0de !default;
+$brand-info: #453320 !default;
 $brand-warning:         #f0ad4e !default;
 $brand-danger:          #d9534f !default;
 
