ADD item name macro to image carousel shop builder widget

--- a/resources/views/Widgets/Common/ImageCarouselWidget.twig
+++ b/resources/views/Widgets/Common/ImageCarouselWidget.twig
@@ -28,11 +28,11 @@
         {{ Twig.set("itemData", "itemData.documents[0].data") }}
         {{ Twig.set("itemImage", "itemData.images | itemImages | orderByKey('position') | first") }}
 
-        {{ Twig.set("name", Twig.print("ItemName.get(\"itemData | itemName\", \"itemData.variation.bundleType\")")) }}
+        {{ Twig.set("name", Twig.call("ItemName.get", ["itemData | itemName", "itemData.variation.bundleType"])) }}
         {{ Twig.set("url", "itemData | itemURL") }}
         {{ Twig.set("imageUrl", "itemImage.url") }}
 
-        {{ Twig.set("slide", "slide | merge({ name:" ~ Twig.print("ItemName.get(\"itemData | itemName\", \"itemData.variation.bundleType\")") ~ " })") }}
+        {{ Twig.set("slide", "slide | merge({ name: " ~ Twig.call("ItemName.get", ["itemData | itemName", "itemData.variation.bundleType"]) ~ " })") }}
         {{ Twig.set("slide", "slide | merge({ url: itemData | itemURL })") }}
         {{ Twig.set("slide", "slide | merge({ imageUrl: itemImage.url })") }}
 
