--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -20429,19 +20429,21 @@ body.menu-is-visible {
   padding: 1rem 1.5rem;
 }
 
-.widget-text .widget-inner .placeholder {
-  height: 75px;
-}
-
-.widget-text .widget-inner .placeholder.placeholder-text {
+.widget-text .placeholder-text {
   border: 3px dashed #dadae3;
   border-radius: 3px;
+  height: 75px;
   line-height: 75px;
   vertical-align: middle;
   text-align: center;
   color: #dadae3;
   font-size: 20px;
   font-style: italic;
+}
+
+.widget-text.widget-primary .placeholder-text, .widget-text.widget-secondary .placeholder-text, .widget-text.widget-success .placeholder-text, .widget-text.widget-info .placeholder-text, .widget-text.widget-warning .placeholder-text, .widget-text.widget-danger .placeholder-text, .widget-text.widget-inverse .placeholder-text {
+  border-color: white;
+  color: white;
 }
 
 .widget-text.widget-primary {
