FIX twig builder import macro

--- a/resources/views/Widgets/Helper/TwigBuilder.twig
+++ b/resources/views/Widgets/Helper/TwigBuilder.twig
@@ -132,6 +132,7 @@
 
 {% macro import(name, template) %}
     {%- spaceless %}
+        {% import _self as Twig %}
         {{ Twig.do("import \"" ~ template ~ "\" as " ~ name ) }}
     {% endspaceless -%}
 {% endmacro %}
