--- a/resources/scss/ceres/views/Confirmation/_confirmation-order-item.scss
+++ b/resources/scss/ceres/views/Confirmation/_confirmation-order-item.scss
@@ -19,6 +19,12 @@
 		padding-left: .5rem;
 	}
 
+	& .item-bundle {
+		width: 300px;
+		font-weight: 700;
+		font-size: 80%;
+	}
+
 	.item-name{
 	    display: -webkit-box;
         text-overflow: ellipsis;
