FIX Basket, CategoryContent, CategoryItem, SingleItemWrapper, ItemListView - the title is now properly load from translations on these pages

--- a/resources/views/Basket/Basket.twig
+++ b/resources/views/Basket/Basket.twig
@@ -3,7 +3,7 @@
 
 {% block PartialHead %}
     <meta name="robots" content="NOINDEX, NOFOLLOW">
-    <title>{{ trans("Ceres::Template.basket") }} | {{ ceresConfig.header.companyName }}</title>
+    <title>{{ trans("Ceres::Template.basket") }} | {{ trans("Ceres::Template.headerCompanyName") }}</title>
 {% endblock %}
 
 {% block PageBody %}
