--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -67,7 +67,7 @@
             {% endif %}
             {% if ceresConfig.basket.previewType == "right" %}
                 <div class="wrapper wrapper-right">
-                    <basket-preview :show-net-prices={{ showNetPrices | json_encode }}></basket-preview>
+                    <basket-preview></basket-preview>
                 </div>
             {% endif %}
 
