--- a/resources/scss/ceres/views/Item/_single-item.scss
+++ b/resources/scss/ceres/views/Item/_single-item.scss
@@ -113,7 +113,12 @@
 .availability_2 {background-color: $availability_1;}
 .availability_3,
 .availability_4 {background-color: $availability_3;}
-.availability_5 {background-color: $availability_5;}
+.availability_5,
+.availability_6,
+.availability_7,
+.availability_8 {background-color: $availability_5;}
+.availability_9,
+.availability_10 {background-color: $availability_9}
 
 
 .rating{
