CHANGE _variables - add missing availabilities

--- a/resources/scss/_variables.scss
+++ b/resources/scss/_variables.scss
@@ -74,7 +74,6 @@ $grid-gutter-width: 30px !default;
 //
 //## Gray and brand colors for use across Bootstrap.
 
-
 $gray-darker:           #282d2f !default;
 $gray-dark:             #4D4F4D !default;
 $gray:                  #7a7f7f !default;
@@ -115,6 +114,11 @@ $availability_2:        $brand-success !default;
 $availability_3:        $brand-warning !default;
 $availability_4:        $brand-warning !default;
 $availability_5:        $brand-danger !default;
+$availability_6:        $brand-danger !default;
+$availability_7:        $brand-danger !default;
+$availability_8:        $brand-danger !default;
+$availability_9:        $gray-dark !default;
+$availability_10:       $gray-dark !default;
 
 
 //== Scaffolding
