--- a/resources/views/Containers/Components/LastSeenItemList.twig
+++ b/resources/views/Containers/Components/LastSeenItemList.twig
@@ -1,3 +1,3 @@
 <script type="x/template" id="vue-last-seen-item-list">
-    <container-item-list :items="items"></container-item-list>
+    <container-item-list v-if="items.length" :items="items"></container-item-list>
 </script>
