--- a/resources/views/Containers/ItemLists/ItemList3.twig
+++ b/resources/views/Containers/ItemLists/ItemList3.twig
@@ -5,21 +5,25 @@
 {% set itemListId = 3 %}
 {% set isHome = services.template.isHome() %}
 
-{% if listType == "last_seen" %}
-    {% set itemList = services.itemLoader.loadForTemplate('Ceres::ItemList.ItemListView', itemLoaderPresets.lastSeenItemsList, {'items': itemsPerPage}).documents %}
-{% elseif listType == "cross_selling" %}
+{% if listType == "cross_selling" %}
     {% set itemList = item.CrossSellingItems.documents %}
 {% elseif listType == "tag_list" %}
 	{% set itemList = services.itemLoader.loadForTemplate('Ceres::ItemList.ItemListView', itemLoaderPresets.tagList, {'tagIds': tagIds}).documents %}
 {% endif %}
 
+{% if not isHome %}
+    <hr>
+{% endif %}
+
+{% include 'Ceres::Containers.Partials.ItemLists.ItemListHeader.twig' with { itemListId: 3, listType: listType, isHome: isHome } %}
+
+{% if listType == "last_seen" %}
+    <div class="row">
+        <last-seen-item-list></last-seen-item-list>
+    </div>
+{% endif %}
+
 {% if itemList is not empty %}
-    {% if not isHome %}
-        <hr>
-    {% endif %}
-
-    {% include 'Ceres::Containers.Partials.ItemLists.ItemListHeader.twig' with { itemListId: 3, listType: listType, isHome: isHome } %}
-
     <div class="row">
         <container-item-list :items="{{ itemList | json_encode }}"></container-item-list>
     </div>
