--- a/resources/views/PageDesign/Partials/Head.twig
+++ b/resources/views/PageDesign/Partials/Head.twig
@@ -84,6 +84,6 @@
 <link rel="stylesheet" href="https://www.darkages.de/plentydev/krazy8/css/ceres.css">
 
 <!-- Extend the existing style with a template -->
-{{ LayoutContainer.show("Ceres::Template.Style") }}
+{# {{ LayoutContainer.show("Ceres::Template.Style") }} #}
 
 {{ get_shop_builder_styles() }}
