ADD item bundle name filter to get correct bundle prefix and improved the item name macro

--- a/resources/views/PageDesign/Macros/ItemName.twig
+++ b/resources/views/PageDesign/Macros/ItemName.twig
@@ -1,6 +1,16 @@
 {% macro get( itemName, bundleType ) %}
     {% if bundleType == "bundle" %}
+        {% if "[BUNDLE]" in itemName %}
+            {% set itemName = itemName | replace({"[BUNDLE]": ""}) %}
+        {% endif %}
+        
         {{ trans("Ceres::Template.itemBundleName", {"itemName": itemName}) }}
+    {% elseif bundleType == "bundle_item" %}
+        {% if "[-]" in itemName %}
+            {% set itemName = itemName | replace({"[-]": ""}) %}
+        {% endif %}
+
+        {{ itemName }}
     {% else %}
         {{ itemName }}
     {% endif %}
