--- a/resources/views/OrderReturn/Components/OrderReturn.twig
+++ b/resources/views/OrderReturn/Components/OrderReturn.twig
@@ -25,7 +25,7 @@
 					<div class="modal-body">
 						<ul>
 							<li v-for="orderReturnItem in orderReturnItems">
-								${orderReturnItem.quantity}x ${orderReturnItem.orderItem.orderItemName}
+								${orderReturnItem.quantity}x ${orderReturnItem.orderItem | itemBundleName}
 							</li>
 						</ul>
 
