--- a/resources/views/OrderReturn/Components/OrderReturnItem.twig
+++ b/resources/views/OrderReturn/Components/OrderReturnItem.twig
@@ -37,7 +37,7 @@
 					<div class="row">
 						<div class="col-xs-12 col-lg-12">
 							<a :href="orderItemURL">
-								<h2 class="h5 order-return-name">${ getBundlePrefix(orderItem.orderItemName) }</h2>
+								<h2 class="h5 order-return-name">${ orderItem | itemBundleName }</h2>
 							</a>
 						</div>
 					</div>
