--- a/resources/views/Containers/ItemLists/ItemList2.twig
+++ b/resources/views/Containers/ItemLists/ItemList2.twig
@@ -11,7 +11,7 @@
 	{% set itemList = services.itemLoader.loadForTemplate('Ceres::ItemList.ItemListView', itemLoaderPresets.tagList, {'tagIds': tagIds}).documents %}
 {% endif %}
 
-{% if not isHome %}
+{% if not isHome or listType == "last_seen"  %}
     <hr>
 {% endif %}
 
@@ -21,9 +21,7 @@
     <div class="row">
         <last-seen-item-list></last-seen-item-list>
     </div>
-{% endif %}
-
-{% if itemList is not empty %}
+{% elseif itemList is not empty %}
     <div class="row">
         <container-item-list :items="{{ itemList | json_encode }}"></container-item-list>
     </div>
