--- a/resources/views/PageDesign/Partials/Head.twig
+++ b/resources/views/PageDesign/Partials/Head.twig
@@ -77,9 +77,9 @@
 {% set performanceLevel = config('Ceres.log.performance.level') %}
 {% set itemName = config('Ceres.item.name') %}
 
-{% if LayoutContainer.show("Ceres::Template.StyleOverwrite") | trim is empty %}
+{# {% if LayoutContainer.show("Ceres::Template.StyleOverwrite") | trim is empty %}
     <link rel="stylesheet" href="https://www.darkages.de/plentydev/krazy8/css/ceres.css">
-{% endif %}
+{% endif %} #}
 
 <link rel="stylesheet" href="https://www.darkages.de/plentydev/krazy8/css/ceres.css">
 
