--- a/resources/scss/_variables.scss
+++ b/resources/scss/_variables.scss
@@ -137,6 +137,9 @@ $link-color:            $brand-primary !default;
 $link-hover-color:      darken($link-color, 15%) !default;
 
 
+$box-shadow:            0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
+
+
 // Body
 //
 // Settings for the `<body>` element.
