--- a/resources/scss/ceres/views/PageDesign/_search-box.scss
+++ b/resources/scss/ceres/views/PageDesign/_search-box.scss
@@ -18,7 +18,7 @@
     .search-box-shadow-frame {
         display: flex;
         flex: 100;
-        box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
+        box-shadow: $box-shadow;
     }
     .search-input {
         flex: 1 0 70%;
