--- a/resources/scss/ceres/views/Templates/AddressSelect/_address-select.scss
+++ b/resources/scss/ceres/views/Templates/AddressSelect/_address-select.scss
@@ -43,6 +43,9 @@
 		padding: 0;
 		margin: 0;
 		list-style: none;
+		box-shadow: $box-shadow;
+		max-height: 500px;
+		overflow: scroll;
 	}
 
 	.add-item{
