--- a/resources/scss/ceres/views/Templates/BasketPreview/_basket-preview-hover.scss
+++ b/resources/scss/ceres/views/Templates/BasketPreview/_basket-preview-hover.scss
@@ -44,7 +44,7 @@
 	width: 100%;
 	max-height: 100%;
 	background: $white;
-	box-shadow: 0 6px 12px rgba(0,0,0,.175);
+	box-shadow: $box-shadow;
 	padding: .75rem;
 	color: $gray-dark;
 	font-size: 1rem;
